ingress/app-space-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  namespace: app-space
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/wear"
        backend:
          service:
            name: wear-service
            port:
              number: 8080
  - http:
      paths:
      - pathType: Prefix
        path: "/watch"
        backend:
          service:
            name: video-service
            port:
              number: 8080
