ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appcake
  labels:
    name: ingress-appcake
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: appcake.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appcake-nodeport
            port:
              number: 80
