ingress/pay-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pay-ingress
  namespace: critical-space
  labels:
    name: pay-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/pay"
        backend:
          service:
            name: pay-service
            port:
              number: 8282
